--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	</script>
 
 	<!-- 3rd Party JavaScript and CSS -->
+	<!-- build:js js/vendor.js -->
 	<script type="application/javascript" src="../bower_components/jquery/dist/jquery.js"></script>
 	<script type="application/javascript" src="../bower_components/angular-loader/angular-loader.js"></script>
 	<script type="application/javascript" src="../bower_components/angular/angular.js"></script>
@@ -24,20 +25,22 @@
 	<script type="application/javascript" src="../bower_components/angular-ui-sortable/sortable.js"></script>
 	<script type="application/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script type="application/javascript" src="../bower_components/ui-select/dist/select.js"></script>
-	<script type="application/javascript">
-		webshims.polyfill( 'forms forms-ext' );
-	</script>
-	<link rel="stylesheet" href="../bower_components/bootswatch/superhero/bootstrap.css" />
-
-	<!-- Application CSS -->
-	<!-- build:styles -->
-	<link rel="stylesheet" href="css/app.css" />
-	<!-- endbuild -->
-
-	<!-- build:library -->
 	<script type="application/javascript" src="../bower_components/angular-gettext/dist/angular-gettext.js"></script>
 	<script type="application/javascript" src="../bower_components/angular-growl-v2/build/angular-growl.js"></script>
 	<script type="application/javascript" src="../bower_components/iframe-resizer/src/iframeResizer.contentWindow.js"></script>
+	<!-- endbuild -->
+
+	<script type="application/javascript">
+		webshims.polyfill( 'forms forms-ext' );
+	</script>
+
+	<!-- build:css styles/vendor.css-->
+	<link rel="stylesheet" href="../bower_components/bootswatch/superhero/bootstrap.css" />
+	<!-- endbuild -->
+
+	<!-- Application CSS -->
+	<!-- build:css styles/app.css -->
+	<link rel="stylesheet" href="css/app.css" />
 	<!-- endbuild -->
 </head>
 <body>
@@ -71,7 +74,7 @@
 </div>
 
 <!-- Application JavaScript -->
-<!-- build:application -->
+<!-- build:js js/app.js -->
 <script type="application/javascript" src="api/measurements/measurements.module.js"></script>
 <script type="application/javascript" src="app.module.js"></script>
 <script type="application/javascript" src="components/mpd-budget/mpd-budget.module.js"></script>
@@ -112,6 +115,10 @@
 <script type="application/javascript" src="states/ministry/forms/edit/edit-form.controller.js"></script>
 <script type="application/javascript" src="states/ministry/unsaved-changes.controller.js"></script>
 <script type="application/javascript" src="states/select/select.controller.js"></script>
+
+<!-- inject:partials -->
+<!-- angular templates will be automatically converted in js and inserted here -->
+<!-- endinject -->
 <!-- endbuild -->
 
 </body>
