--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html ng-app="mpdCalculator">
 <head>
 	<meta charset="UTF-8">
@@ -57,7 +57,7 @@
 
 	<div class="sk-container">
 		<div>
-			<div>Application Loading &hellip;</div>
+			<div translate>Application Loading &hellip;</div>
 			<div class="sk-cube-grid">
 				<div class="sk-cube sk-cube1"></div>
 				<div class="sk-cube sk-cube2"></div>
