mark for translation

--- a/src/states/ministry/forms/sidebar.html
+++ b/src/states/ministry/forms/sidebar.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="btn-group btn-group-justified">
-		<a class="btn btn-success" ui-sref-active="active" ui-sref="budgets">Budgets</a>
-		<a class="btn btn-success" ui-sref-active="active" ui-sref="forms">Forms</a>
+		<a class="btn btn-success" ui-sref-active="active" ui-sref="budgets" translate>Budgets</a>
+		<a class="btn btn-success" ui-sref-active="active" ui-sref="forms" translate>Forms</a>
 	</div>
 
 	<div class="content">
