move language selection to separate file

--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,7 @@
 <script type="application/javascript" src="states/ministry/forms/edit/edit-form.controller.js"></script>
 <script type="application/javascript" src="states/ministry/unsaved-changes.controller.js"></script>
 <script type="application/javascript" src="states/select/select.controller.js"></script>
+<script type="application/javascript" src="app.language.js"></script>
 
 <!-- inject:partials -->
 <!-- angular templates will be automatically converted in js and inserted here -->
