--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html ng-app="mpdCalculator">
 <head>
 	<meta charset="UTF-8">
@@ -28,6 +28,7 @@
 	<script type="application/javascript" src="../bower_components/angular-gettext/dist/angular-gettext.js"></script>
 	<script type="application/javascript" src="../bower_components/angular-growl-v2/build/angular-growl.js"></script>
 	<script type="application/javascript" src="../bower_components/iframe-resizer/src/iframeResizer.contentWindow.js"></script>
+    <script type="application/javascript" src="../bower_components/angular-cas-auth-api/dist/cas-auth-api.js"></script>
 	<!-- endbuild -->
 
 	<script type="application/javascript">
@@ -75,7 +76,7 @@
 
 <!-- Application JavaScript -->
 <!-- build:js js/app.js -->
-<script type="application/javascript" src="api/measurements/measurements.module.js"></script>
+<script type="application/javascript" src="api/mpdCalculator/mpdCalculator.module.js"></script>
 <script type="application/javascript" src="app.module.js"></script>
 <script type="application/javascript" src="components/mpd-budget/mpd-budget.module.js"></script>
 <script type="application/javascript" src="components/mpd-form/mpd-form.module.js"></script>
@@ -91,10 +92,10 @@
 <script type="application/javascript" src="states/ministry/forms/edit/edit-form.state.js"></script>
 <script type="application/javascript" src="states/select/select.state.js"></script>
 
-<script type="application/javascript" src="api/measurements/budgets.service.js"></script>
-<script type="application/javascript" src="api/measurements/forms.service.js"></script>
-<script type="application/javascript" src="api/measurements/ministries.service.js"></script>
-<script type="application/javascript" src="api/measurements/session.service.js"></script>
+<script type="application/javascript" src="api/mpdCalculator/budgets.service.js"></script>
+<script type="application/javascript" src="api/mpdCalculator/forms.service.js"></script>
+<script type="application/javascript" src="api/mpdCalculator/ministries.service.js"></script>
+<script type="application/javascript" src="api/mpdCalculator/session.service.js"></script>
 <script type="application/javascript" src="app.config.js"></script>
 <script type="application/javascript" src="components/mpd-budget/budget-value.filter.js"></script>
 <script type="application/javascript" src="components/mpd-budget/mpd-budget.directive.js"></script>
