add language js functions

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
 	<div class="sk-container">
 		<div>
-			<div>Application Loading &hellip;</div>
+			<div translate>Application Loading &hellip;</div>
 			<div class="sk-cube-grid">
 				<div class="sk-cube sk-cube1"></div>
 				<div class="sk-cube sk-cube2"></div>
@@ -97,6 +97,7 @@
 <script type="application/javascript" src="api/mpdCalculator/ministries.service.js"></script>
 <script type="application/javascript" src="api/mpdCalculator/session.service.js"></script>
 <script type="application/javascript" src="app.config.js"></script>
+<script type="application/javascript" src="app.language.js"></script>
 <script type="application/javascript" src="components/mpd-budget/budget-value.filter.js"></script>
 <script type="application/javascript" src="components/mpd-budget/mpd-budget.directive.js"></script>
 <script type="application/javascript" src="components/mpd-budget/question.directive.js"></script>
